@@ -1,3 +1,8 @@
+2007-10-11 [colin]	0.12.1cvs6
+
+	* src/notification_trayicon.c
+		Use ngettext for plurals
+
 2007-10-11 [holger]	0.12.1cvs5
 
 	* configure.ac
